--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,5 +1,5 @@
 .card {
-  max-width: 575px;
+  width: 38.4vw;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -29,7 +29,7 @@
   gap: 20px;
   margin-top: 20px;
   display: flex;
-  flex-direction: column;
+flex-direction: column;
 }
 /* .card {
   grid-column: 1/2;
@@ -49,5 +49,8 @@
 } */
 .card_wrapper_inner {
   display: flex;
-  justify-content: space-between !important;
+}
+
+.card + .card {
+  margin-left: 20px;
 }
