--- a/src/pages/Appeal/apeal.css
+++ b/src/pages/Appeal/apeal.css
@@ -12,6 +12,8 @@
   padding-top: 0px;
 }
 .apeal_right_box_inner {
+  width: 100%;
   padding-left: 20px;
   display: flex;
+  flex-direction: column;
 }
